syntax = "proto3";
package v1;

option go_package = "github.com/vinceanalytics/vince/proro/v1";

message Metadata { repeated Block blocks = 1; }

// Defines metadata about a single parquet file.
message Block {
  // a ULID string identifier for this block.
  bytes id = 1;
  // Smallest timestamp in milliseconds observed in this block
  int64 min = 2;
  // Largest timestamp in milliseconds observed in this block.
  int64 max = 3;
  // Size on bytes contained in this block
  int64 size = 4;
  // Block level statistsic about this site
  Stats stats = 5;
}

message Stats {
  double visitors = 1;
  double page_views = 2;
  double bounce_rate = 3;
  double session_duration = 4;
  double sessions = 5;
}

message Filter {
  string column = 1;
  Op op = 2;
  oneof value {
    string str = 3;
    int64 timestamp = 4;
    int64 duration = 5;
  }
}

enum Op {
  equal = 0;
  not_equal = 1;
  greater = 2;
  greater_equal = 3;
  less = 4;
  less_equal = 5;
}

message Index {
  // List of row groups bitmaps for a block
  repeated bytes bitmaps = 1;
}